# django_auth

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
apps/Auth/: admin.py  forms.py  models.py  serializers.py  views.py
apps/Auth/migrations/: 0001_initial.py
apps/address/: admin.py  models.py
apps/address/migrations/: 0001_initial.py
apps/service_providers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/service_providers/migrations/: 0001_initial.py  0002_alter_serviceprovider_locations.py
config/: settings.py  urls.py
utils/: email.py
